--- a/app/views/imports/_imports_list.html.haml
+++ b/app/views/imports/_imports_list.html.haml
@@ -6,13 +6,13 @@
         %tr
           %td{title: 'Codigo de la importación.'}
             %strong
-              IMP / PD / BL
+              IMP / PD / BL / DO
           %td{title: 'Cliente.'}
             %strong
               Cliente
           %td{title: 'Fecha de la importación'}
             %strong
-              Fecha
+              Fecha de ingreso
           %td{title: 'Opciones'}
             %strong
               Opciones
