--- a/app/views/imports/_short_form.html.haml
+++ b/app/views/imports/_short_form.html.haml
@@ -12,9 +12,9 @@
           .row
             = f.hidden_field :user_id, value: @user.id
             .col-md-6
-              = f.text_field :code, label: set_icon_helper('IMP / PD / BL *', 'chevron-right'), required: 'required'
+              = f.text_field :code, label: set_icon_helper('IMP / PD / BL / Do*', 'chevron-right'), required: 'required'
             .col-md-6
-              = f.text_field :date, label: set_icon_helper('Fecha *', 'calendar'), required: 'required', class: 'datepicker', 'data-provide': 'datepicker', autocomplete: 'off'
+              = f.text_field :date, label: set_icon_helper('Fecha  de ingreso*', 'calendar'), required: 'required', class: 'datepicker', 'data-provide': 'datepicker', autocomplete: 'off'
             .col-md-12
             .col-md-12.align-right
         .modal-footer
