--- a/app/views/imports/_form.html.haml
+++ b/app/views/imports/_form.html.haml
@@ -3,9 +3,9 @@
     .col-md-4
       = f.select :user_id, User.with_role(:customer).collect {|p| [ p.name, p.id ] }, { label: set_icon_helper('Cliente *', 'users')}, {required: 'required', include_blank: true }
     .col-md-4
-      = f.text_field :code, label: set_icon_helper('IMP / PD / BL *', 'chevron-right'), required: 'required'
+      = f.text_field :code, label: set_icon_helper('IMP / PD / BL / DO *', 'chevron-right'), required: 'required'
     .col-md-4
-      = f.text_field :date, label: set_icon_helper('Fecha *', 'calendar'), required: 'required', class: 'datepicker', 'data-provide': 'datepicker', autocomplete: 'off'
+      = f.text_field :date, label: set_icon_helper('Fecha de ingreso *', 'calendar'), required: 'required', class: 'datepicker', 'data-provide': 'datepicker', autocomplete: 'off'
     .col-md-12
       .hr-line-dashed
     .col-md-12.align-right
