--- a/app/views/dispatch_products/_form.html.haml
+++ b/app/views/dispatch_products/_form.html.haml
@@ -1,20 +1,11 @@
-= bootstrap_form_for(@inventory, url: "#{inventories_path}/#{@inventory.id}",  method: :patch) do |f|
+= bootstrap_form_for(@dispatch_product, url: "#{dispatch_products_path}/#{@dispatch_product.id}",  method: :patch) do |f|
   .modal-body
     .row
-      .col-md-4
-        = f.text_field :identification, label: set_icon_helper('Identificación *', 'i-card'), required: 'required'
-      .col-md-4
-        = f.select :import_id, Import.all.collect {|p| [ p.code, p.id ] }, { label: set_icon_helper('Importación *', 'ship')}, {required: 'required', include_blank: true }
-      .col-md-4
-        = f.select :product_id, Product.all.collect {|p| [ product_name(p), p.id ] }, { label: set_icon_helper('Producto *', 'tag')}, {required: 'required', include_blank: true }
-      .col-md-4
-        = f.select :container_id, Container.all.collect {|p| [ p.code, p.id ] }, { label: set_icon_helper('Container *', 'train'), include_blank: true }
+      = f.hidden_field :dispatch_id, value: @dispatch.id
+      .col-md-12
+        = f.select :import_product_id, @dispatch.import.import_products.all.collect {|ip| [product_name_for_dispatch_product(ip), ip.id ] }, { label: set_icon_helper('Producto (referencia) [Paquetes x  unidades] [paquetes disponibles] *', 'tag')}, {required: 'required', include_blank: true, id: 'dispatch_product'}
       .col-md-4
         = f.number_field :total_of_packages, label: set_icon_helper('Cantidad de paquetes *', 'pie-chart'), required: 'required', autocomplete: 'off'
-      .col-md-4
-        = f.number_field :unit_by_package, label: set_icon_helper('Unidades por paquete *', 'braille'), required: 'required', autocomplete: 'off'
-      .col-md-4
-        = f.number_field :net_weight, label: set_icon_helper('Peso neto de un paquete *', 'balance-scale'), required: 'required', autocomplete: 'off'
       .col-md-12
       .col-md-12.align-right
   .modal-footer
