--- a/app/views/dispatch_products/_products_list.html.haml
+++ b/app/views/dispatch_products/_products_list.html.haml
@@ -1,66 +1,66 @@
-- inventories = smart_listing.collection
+- products = smart_listing.collection
 .table-responsive
   %table.table.table-striped.table-hover
     %tbody
-      - if inventories.count > 0
+      - if products.count > 0
         %tr
-          %td{title: 'Identificación del registro.'}
-            %strong
-              Indentificación
           %td{title: 'Nombre del producto'}
             %strong
               Producto
+          %td{title: 'Referencia del producto'}
+            %strong
+              Referencia
           %td{title: 'Contenedor.'}
             %strong
               Contenedor
-          %td{title: 'Cantidad de paquetes.'}
-            %strong
-              Paquetes
-          %td{title: 'Cantidad de unidades por paquete.'}
+          %td{title: 'Unidades por paquete'}
             %strong
               Unidades por paquete
-          %td{title: 'Total de unidades (paquetes * unidades)'}
+          %td{title: 'Cantidad de paquetes despachados.'}
             %strong
-              Total unidades
-          %td{title: 'Peso neto.'}
+              Paquetes
+          %td{title: 'Unidades despachadas.'}
             %strong
-              Peso neto
-          %td{title: 'Peso bruto'}
+              Unidades
+          %td{title: 'Peso bruto despachado.'}
             %strong
               Peso bruto
+          %td{title: 'Paquetes disponibles'}
+            %strong
+              Paquetes disponibles
           %td{title: 'Opciones'}
             %strong
               Opciones
-        - inventories.each do |inventory|
+        - products.each do |product|
           %tr
-            %td{title: 'Codigo de la importación.'}
-              %a.client-link{href: edit_inventory_path(inventory)}
-                = inventory.identification
             %td{title: 'Nombre del producto'}
-              = inventory.product.name
+              %a.client-link{href: edit_product_path(product.import_product.product)}
+                = product.import_product.product.name
+            %td{title: 'Referencia del producto'}
+              = product.import_product.product.reference
             %td{title: 'Contenedor.'}
-              = inventory.container.try(:code) || 'No aplica'
-            %td{title: 'Cantidad de paquetes.'}
-              = inventory.total_of_packages
-            %td{title: 'Cantidad de unidades por paquete.'}
-              = inventory.unit_by_package
-            %td{title: 'Total de unidades (paquetes * unidades)'}
-              = inventory.total_of_units
-            %td{title: 'Peso neto.'}
-              = inventory.net_weight
-            %td{title: 'Opciones'}
-              = inventory.gross_weight
+              = product.import_product.container.code
+            %td{title: 'Unidades por paquete'}
+              = product.import_product.unit_by_package
+            %td{title: 'Cantidad de paquetes despachados.'}
+              = product.total_of_packages
+            %td{title: 'Unidades despachadas.'}
+              = product.total_of_packages * product.import_product.unit_by_package
+            %td{title: 'Peso bruto despachado.'}
+              = product.total_of_packages * product.import_product.net_weight
+            %td{title: 'Paquetes disponibles en stock.'}
+              = products_in_stock product.import_product.id
             %td.user-actions{nowrap: 'nowrap'}
-              %a.btn.btn-white.btn-sm{href: edit_inventory_path(inventory)}
+              %a.btn.btn-white.btn-sm{href: edit_dispatch_product_path(product)}
                 %i.fa.fa-eye
-              %a.btn.btn-warning.btn-sm{href: edit_inventory_path(inventory)}
+              %a.btn.btn-warning.btn-sm{href: edit_dispatch_product_path(product)}
                 %i.fa.fa-pencil
               - if current_user.has_role? :admin
-                - text = "el producto #{inventory.product.name} de la importación #{inventory.import.code} que pertenece al cliente #{inventory.import.user.name}"
-                = link_to_delete_helper(inventory_path(inventory), text)
+                - text = "el producto #{product.import_product.product.name} del despacho #{product.dispatch.code} que pertenece al cliente #{product.import_product.import.user.name}"
+                = link_to_delete_helper(dispatch_product_path(product), text)
       - else
         %tr
           %td
-            0 productos encontrados en el inventario de esta importación.
+            0 productos registrados en el despacho
 .paginator
   = smart_listing.paginate
