--- a/app/views/containers/_short_form.html.haml
+++ b/app/views/containers/_short_form.html.haml
@@ -12,9 +12,9 @@
           .row
             = f.hidden_field :user_id, value: @user.id
             .col-md-6
-              = f.text_field :code, label: set_icon_helper('Codigo *', 'barcode'), autocomplete: 'code', required: 'required', 'data-mask': 'aaaa 9999999 9', placeholder: 'Ejemplo: ABCD 1234567 8', class: 'upper-case'
+              = f.text_field :code, label: set_icon_helper('Contenedor *', 'barcode'), autocomplete: 'code', required: 'required', 'data-mask': 'aaaa 9999999 9', placeholder: 'Ejemplo: ABCD 123456 7', class: 'upper-case'
             .col-md-6
-              = f.text_field :date_of_entry_to_warehose_at, label: set_icon_helper('Fecha de ingreso a bodega *', 'calendar'), required: 'required', class: 'container-date', 'data-provide': 'datepicker', autocomplete: 'off'
+              = f.text_field :date_of_entry_to_warehose_at, label: set_icon_helper('Fecha de ingreso a bodega', 'calendar'), class: 'container-date', 'data-provide': 'datepicker', autocomplete: 'off'
             .col-md-6
               = f.text_field :deadline_to_return_at, label: set_icon_helper('Fecha limite de devolución *', 'calendar'), required: 'required', class: 'container-date', 'data-provide': 'datepicker', autocomplete: 'off'
             .col-md-6
