--- a/app/views/dispatches/_short_form.html.haml
+++ b/app/views/dispatches/_short_form.html.haml
@@ -11,22 +11,18 @@
         .modal-body
           .row
             = f.hidden_field :import_id, value: @import.id
-            .col-md-4
-              = f.text_field :code, label: set_icon_helper('Codigo *', 'i-card'), required: 'required'
-            .col-md-4
+            .col-md-6
               = f.text_field :date, label: set_icon_helper('Fecha *', 'calendar'), required: 'required', class: 'container-date', 'data-provide': 'datepicker', autocomplete: 'off'
-            .col-md-4
+            .col-md-6
               = f.text_field :city, label: set_icon_helper('Ciudad *', 'map'), placeholder: 'ejemplo: Armenia/Quindio', required: 'required'
-            .col-md-4
-              = f.text_field :contact, label: set_icon_helper('Nombre del contacto *', 'user'), required: 'required'
-            .col-md-4
-              = f.text_field :phone_number_1, label: set_icon_helper('Telefono 1 *', 'phone'), required: 'required'
-            .col-md-4
-              = f.text_field :phone_number_2, label: set_icon_helper('Telefono 2 ', 'phone')
             .col-md-6
-              = f.text_area :address, label: set_icon_helper('Dirección *', 'map-marker'), required: 'required'
+              = f.text_field :phone_number_1, label: set_icon_helper('Telefono', 'phone')
             .col-md-6
-              = f.text_area :description, label: set_icon_helper('Descripción o nota', 'comment-o')
+              = f.select :driver_id, Driver.all.collect {|c| [ ("#{c.name} [Cedula: #{c.identification}] "), c.id ] }, { label: set_icon_helper('Conductor ', 'truck'), include_blank: true }
+            .col-md-6
+              = f.text_area :address, label: set_icon_helper('Dirección ', 'map-marker')
+            .col-md-6
+              = f.text_area :description, label: set_icon_helper('Observación o notas', 'comment-o')
             .col-md-12
             .col-md-12.align-right
         .modal-footer
